K8S/lab/client.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-result
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client-result
  template:
    metadata:
      labels:
        app: client-result
    spec:
      containers:
        - name: result-client
          image: 10.111.1.101:55055/result-client
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client-web
  template:
    metadata:
      labels:
        app: client-web
    spec:
      containers:
        - name: web-client
          image: 10.111.1.101:55055/web-client
          ports:
            - containerPort: 80
