K8S/lab/db-server.sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-reader
spec:
  serviceName: "db-reader-service"
  replicas: 2
  selector:
    matchLabels:
      app: db-reader
  template:
    metadata:
      labels:
        app: db-reader
    spec:
      containers:
        - name: mysql
          image: 10.111.1.101:55055/mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: db-read-pvc
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-writer
spec:
  serviceName: "db-writer-service"
  replicas: 1
  selector:
    matchLabels:
      app: db-writer
  template:
    metadata:
      labels:
        app: db-writer
    spec:
      containers:
        - name: mysql
          image: 10.111.1.101:55055/mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: db-write-pvc
