K8S/lab/db-server.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-reader-svc
spec:
  selector:
    app: db-reader
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 33061
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: db-writer-svc
spec:
  selector:
    app: db-writer
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 33062
      targetPort: 3306
