K8S/lab/client.ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: client-result.sample.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-result-svc
                port:
                  number: 80
    - host: client-web.sample.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-web-svc
                port:
                  number: 80
