K8S/lab/client.np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: client-result-policy
spec:
  podSelector:
    matchLabels:
      app: client-result
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: db-reader
      ports:
        - protocol: TCP
          port: 3306
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: client-web-policy
spec:
  podSelector:
    matchLabels:
      app: client-web
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: db-writer
      ports:
        - protocol: TCP
          port: 3306
